--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<body style="background-color: #e0d4d2">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+  <body style="background-color: #e0d4d2">
+    <head>
+      <meta charset="utf-8" />
+      <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <title>React App</title>
+      <link
+        href="https://fonts.googleapis.com/css?family=Work+Sans:400,700&display=swap"
+        rel="stylesheet"
+      />
+      <style>
+        * {
+          font-family: "Work Sans";
+        }
+      </style>
+    </head>
+    <body>
+      <noscript>You need to enable JavaScript to run this app.</noscript>
+      <div id="root"></div>
+    </body>
   </body>
-</body>
 </html>
