--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
       <meta charset="utf-8" />
       <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <title>React App</title>
+      <title>CHC - Private School</title>
       <link
         href="https://fonts.googleapis.com/css?family=Work+Sans:400,700&display=swap"
         rel="stylesheet"
